# kmerforge

./: CITATION.bib  Dockerfile  Makefile  README.md  singularity.def
src/: CMakeLists.txt  kmer_common.h  kmer_cosinesim.cpp  kmer_count.cpp  kmer_diff.cpp  kmer_reads.cpp
test/: run_tests.sh  sample_a.fastq  sample_b.fastq  test_cosinesim.sh  test_count.sh  test_count_lowmem.sh  test_diff.sh  test_partition.cpp  test_reads.sh
